--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body{
   background-size:cover;
 }
 .App2{
-  background-image: url('D:\REACT\realityai\public\landhome.jpg');
+  background-image: url('https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600');
   background-size:cover;
   height: 20vw;
 }
