--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,11 @@ body{
   background-size:cover;
 }
 .App2{
-  background-image: url('https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600');
   background-size:cover;
-  height: 20vw;
+  background-image: url('098765img.jpg');
+  height: 100%;
+  width: 100%;
+
 }
 .dropdown{
   opacity: 0.9;
